// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapDispatchToProps matches last snapshot 1`] = `
{
  "fetchSearchResults": [Function],
  "setSearchFilter": [Function],
  "setSearchTerm": [Function],
}
`;

exports[`mapStateToProps matches last snapshot 1`] = `
{
  "filter": "all",
  "goToPerson": [Function],
  "goToPost": [Function],
  "hasMore": undefined,
  "pending": false,
  "searchResults": [],
  "searchTerm": "",
}
`;

exports[`mergeProps matches last snapshot 1`] = `
{
  "fetchMoreSearchResults": [Function],
  "fetchSearchResults": [Function],
  "filter": "all",
  "goToPerson": [Function],
  "goToPost": [Function],
  "hasMore": undefined,
  "pending": false,
  "searchResults": [],
  "searchTerm": "",
  "setSearchFilter": [Function],
  "setSearchTerm": [Function],
}
`;
